[package]
name = "st7789"
description = "ST7789 TFT LCD driver with embedded-graphics support"
version = "0.99.0"
authors = ["Ales Katona <almindor@gmail.com>", "Paul Sajna <sajattack@gmail.com>", "Jan Nordholz <j.nordholz@tu-berlin.de>"]
edition = "2018"
license = "MIT"
repository = "https://gitlab1.ptb.de/nordholz/st7789.git"
keywords = ["embedded-hal-driver", "st7789", "display"]
readme = "README.md"

[dependencies]
display-interface = "0.4"
embedded-hal = "0.2"
nb = "0.1"

[dependencies.embedded-graphics]
optional = true
version = "0.6"

[dependencies.heapless]
optional = true
version = "0.5"

[features]
default = ["graphics", "batch", "buffer"]
graphics = ["embedded-graphics"]
batch = ["heapless", "graphics"]
buffer = []
